--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
       
     <version>0.1.0-SNAPSHOT</version>
       
-    <groupId>EV3projects</groupId>
+    <groupId>LejosProject</groupId>
       
-    <artifactId>EV3projects</artifactId>
+    <artifactId>LejosProject</artifactId>
       
     <properties>
             
@@ -37,7 +37,7 @@
                         
                 <artifactId>libraries-bom</artifactId>
                         
-                <version>26.13.0</version>
+                <version>26.14.0</version>
                         
                 <type>pom</type>
                         
@@ -92,79 +92,83 @@
             <artifactId>appengine-api-1.0-sdk</artifactId>
             <version>2.0.14</version>
         </dependency>
-       	 <!-- BEGIN: Added by Pena -->
+        <!-- This is needed in the Google Cloud side to be able to connect to a 
+			database -->
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
+			<version>1.6.3</version>
+		</dependency>
 
-<!-- This is needed in the Google Cloud side to be able to connect to a database -->
-    <dependency>
-      <groupId>com.google.cloud.sql</groupId>
-      <artifactId>mysql-socket-factory-connector-j-8</artifactId>
-      <version>1.6.3</version>
-    </dependency>
-    
-<!-- This is for pooling the database connections - differs pretty much from e.g. Tomcat's way'-->    
-<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
-<dependency>
-    <groupId>com.zaxxer</groupId>
-    <artifactId>HikariCP</artifactId>
-    <version>4.0.3</version>
-</dependency>
+		<!-- This is for pooling the database connections - differs pretty much 
+			from e.g. Tomcat's way' -->
+		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>4.0.3</version>
+		</dependency>
 
-<!-- This dependency is needed for annotations (e.g. @Path, @Consumes, @Produces etc.) in the REST-class-->
-	<dependency>
-	    <groupId>org.glassfish.jersey.media</groupId>
-	    <artifactId>jersey-media-json-jackson</artifactId>
-	    <version>2.27</version>
-	</dependency>
+		<!-- This dependency is needed for annotations (e.g. @Path, @Consumes, 
+			@Produces etc.) in the REST-class -->
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.27</version>
+		</dependency>
 
-<!-- This is needed that your server can handle REST-class as a servlet.
-		e.g. the class org.glassfish.jersey.servlet.ServletContainer 
-		in the project's web.xml file can be found from this library --> 
-	<dependency>
-		<groupId>org.glassfish.jersey.containers</groupId>
-		<artifactId>jersey-container-servlet</artifactId>
-		<version>2.27</version>
-	</dependency>
+		<!-- This is needed that your server can handle REST-class as a servlet. 
+			e.g. the class org.glassfish.jersey.servlet.ServletContainer in the project's 
+			web.xml file can be found from this library -->
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>2.27</version>
+		</dependency>
 
-<!-- This is needed because of injections  - server can inject our extra classes into resource -->	
-	<dependency>
-		<groupId>org.glassfish.jersey.inject</groupId>
-		<artifactId>jersey-hk2</artifactId>
-		<version>2.27</version>
-	</dependency>
+		<!-- This is needed because of injections - server can inject our extra 
+			classes into resource -->
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>2.27</version>
+		</dependency>
 
 
-<!-- This is needed to be able to connect to MySQL database. -->	
-   <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.29</version>
-    </dependency>
+		<!-- This is needed to be able to connect to MySQL database. -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.31</version> <!-- Could be this depending on the version 5.1.6 -->
+		</dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink 
-		Eclipselink JPA Implementation 
-	-->
-	<dependency>
-	    <groupId>org.eclipse.persistence</groupId>
-	    <artifactId>eclipselink</artifactId>
-	    <version>2.5.0</version>
-	</dependency>
-	
-	<!-- 
-	If using Java 11 or newer add next two.
-	These are moved to servlet api and not any more in Java SE API 
-	 -->
-	<dependency>
-	    <groupId>javax.xml.bind</groupId>
-	    <artifactId>jaxb-api</artifactId>
-	    <version>2.3.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax.activation</groupId>
-	    <artifactId>activation</artifactId>
-	    <version>1.1.1</version>
-	</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink 
+			Eclipselink JPA Implementation -->
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
-<!-- END: Added by Pena -->
+		<!-- Added -->
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.jpa</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+
+		<!-- If using Java 11 or newer add next two. These are moved to servlet 
+			api and not any more in Java SE API -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
         <!-- Test Dependencies -->
             
         <dependency>
