--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,27 +7,17 @@
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <!-- 
-		This class (org.glassfish.jersey.servlet.ServletContainer)
-		is needed that server (servlet container) can handle REST-class as a servlet,
-		which it actually is, though written in another way
-		
-		The element 'servlet-name' is the way we can bind this class and url.
-		See the element servlet-mapping below. Its servlet-name element should
-		have exactly the same value as here in the servlet element is.
-	-->
-	
-	<servlet>
-		<servlet-name>robot18service</servlet-name>
+  <servlet>
+		<servlet-name>robotservices</servlet-name>
 		<servlet-class>
 			org.glassfish.jersey.servlet.ServletContainer
 		</servlet-class>
 		<!--
-			init-param tells in which package REST services are
+			init-param tells in which package(s) REST services are (comma separated list if necessary)
 		-->
 		<init-param>
 		  <param-name>jersey.config.server.provider.packages</param-name>
-		  <param-value>service,data,app,conn,</param-value>
+		  <param-value>app,data,services</param-value>
 		</init-param>
 		<!--
 			This tells the server to load REST service when the server starts
@@ -40,7 +30,7 @@
 	the REST class and in its methods
 	-->
 	<servlet-mapping>
-		<servlet-name>robot18service</servlet-name>
+		<servlet-name>robotservices</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>  
 </web-app>
